<resources>
    <string name="app_name">Coinbook</string>

    <string name="toast_settings_saved">Settings were successfully saved!</string>
    <string name="toast_success">Data saved successfully</string>
    <string name="toast_error_empty_fields">Fields must not be empty</string>
    <string name="toast_error_incorrect_number">Field for numbers must not contain other characters</string>
    <string name="toast_error_no_changes">Nothing has changed</string>
    <string name="toast_error_not_enough_money">Not enough money to remove this amount</string>
    <string name="toast_error_limit_without_value">Limit has no value. Please, enter value more than 0</string>
    <string name="toast_error_create_category">Create at least one category</string>

    <string name="operation_info_money_box_income">From money box</string>
    <string name="operation_info_money_box_expense">Added to money box</string>
    <string name="operation_info_debt_income">%s lent you money</string>
    <string name="operation_info_debt_expense">Debt to %s</string>

    <string name="description_money_box_income">From money box</string>
    <string name="description_money_box_expense">Added to money box</string>

    <string name="title_balance">Balance</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_income">Income</string>
    <string name="title_money_box">Money box</string>
    <string name="title_debts">Debts</string>
    <string name="title_limits">Limits</string>
    <string name="title_alarm">Alarms</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>

    <string name="amount">%s %s</string>
    <string name="amount_limit">%s / %s</string>
    <string name="amount_minus">- %s %s</string>
    <string name="amount_plus">+ %s %s</string>

    <string name="info_expenses_add_new_category">New category</string>

    <string name="info_money_box_goal_amount">Your goal: %s</string>
    <string name="info_money_box_goal">You are saving money for: %s</string>
    <string name="info_money_box_goal_completed">You made it in time!</string>
    <string name="info_money_box_goal_exceeded">Unfortunately, you did not have time</string>

    <string name="info_debt_positive">Next repayment: %s</string>
    <string name="info_debt_negative">You have overdue repayments</string>
    <string name="info_debt_specific_positive">Repay before: %s</string>
    <string name="info_debt_specific_negative">Debt is overdue by days: %s </string>

    <string name="info_limit_positive">You can spend %s %s more this month</string>
    <string name="info_limit_negative">You have exceeded your limit by %s %s</string>

    <string name="info_alarm">The next event will be %s</string>

    <string name="no_expenses">You don\'t have any expenses this month</string>
    <string name="no_income">You don\'t have any income this month</string>
    <string name="no_money_box">You don\'t have a money box yet</string>
    <string name="no_money_box_hint_create">Click on the pig to create or edit</string>
    <string name="no_money_box_operations">You don\'t have any operations with your money box yet</string>
    <string name="no_debts">You don\'t have any debts yet</string>
    <string name="no_limits">You don\'t have any limits yet</string>
    <string name="no_alarms">You don\'t have any alarms yet</string>
    <string name="no_history">You don\'t have any completed operations yet</string>

    <string name="dialog_edit_balance">Edit balance</string>
    <string name="dialog_add_new_income">Add new income</string>
    <string name="dialog_add_new_expense">Add new expense</string>
    <string name="dialog_create_money_box">Create money box</string>
    <string name="dialog_put_in_money_box">Put money in money box</string>
    <string name="dialog_remove_from_money_box">Take out of money box</string>
    <string name="dialog_edit_money_box_operation">Edit money box operation</string>
    <string name="dialog_add_new_debt">Add new debt</string>
    <string name="dialog_add_new_limit">Add new limit</string>
    <string name="dialog_add_new_alarm">Add new alarm</string>
    <string name="dialog_add_new_category">Add new category</string>

    <string name="hint_balance">New balance amount</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_source">Source of income</string>
    <string name="hint_creditor">Creditor</string>
    <string name="hint_deadline">Deadline</string>
    <string name="hint_description">Description</string>
    <string name="hint_name">Name</string>
    <string name="hint_datetime">Date and time</string>
    <string name="hint_limit">Limit (0 = no limits)</string>
    <string name="hint_money_box">I\'m saving money for…</string>

    <string name="button_done">Done</string>

    <string name="settings_currency">Currency</string>
    <string name="settings_enable_notifications">Enable notifications</string>
    <string name="settings_enable_notifications_sound">Turn on notifications sound</string>
    <string name="settings_hint_enter_new_balance">Enter new balance</string>

    <string name="content_description_balance_image">Check your balance</string>
    <string name="content_description_income_image">Check your income stats</string>
    <string name="content_description_plus_image">Add new expense</string>
    <string name="content_description_expense_image">Check your expense stats</string>
    <string name="content_description_minus_image">Add new income</string>
    <string name="content_description_piggy_bank_image">Open your money box</string>
    <string name="content_description_debt_image">Check your debts</string>
    <string name="content_description_limit_image">Check your limits</string>
    <string name="content_description_alarm_image">Check your reminders</string>
    <string name="content_description_history_image">Check history of operations</string>
    <string name="content_description_settings_image">Open settings of the application</string>
    <string name="content_description_left_arrow_image">Go back to home screen</string>
    <string name="content_description_trash_image">Delete money box</string>

    <string name="content_description_add_new_income">Add new income</string>
    <string name="content_description_add_new_expense">Add new expense</string>
    <string name="content_description_replenish_money_box">Replenish your money box</string>
    <string name="content_description_take_out_of_money_box">Take out money from your money box</string>
    <string name="content_description_add_new_debt">Add new debt</string>
    <string name="content_description_add_new_limit">Add new limit</string>
    <string name="content_description_add_new_alarm">Add new alarm</string>
    <string name="content_description_add_new_money_box">Add new money box</string>

    <string name="content_description_simple_income_image">Image of a hand with pluses above it</string>
    <string name="content_description_simple_expense_image">Image of a hand giving away money</string>
    <string name="content_description_simple_piggy_bank_image">Image of a piggy bank</string>
    <string name="content_description_simple_debt_image">Image of a weight with a drawn dollar on it</string>
    <string name="content_description_simple_limit_image">Image of a hand and a prohibition sign</string>
    <string name="content_description_simple_alarm_image">Image of a ringing bell</string>

    <array name="categories">
        <item>Home</item>
        <item>Food</item>
        <item>Transport</item>
        <item>Entertainment</item>
    </array>

    <array name="currencies">
        <item>$</item>
        <item>€</item>
        <item>₽</item>
        <item>£</item>
    </array>

</resources>