<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AlarmsActivity">

    <TextView
        android:id="@+id/tv_alarms_title"
        style="@style/activity_titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:text="@string/title_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        style="@style/navigation_images"
        android:contentDescription="@string/content_description_left_arrow_image"
        app:layout_constraintBottom_toBottomOf="@+id/tv_alarms_title"
        app:layout_constraintStart_toStartOf="@+id/tv_alarms_title"
        app:layout_constraintTop_toTopOf="@+id/tv_alarms_title"
        app:srcCompat="@drawable/ic_left_arrow" />

    <ImageView
        android:id="@+id/iv_add_new_alarm"
        style="@style/navigation_images"
        android:contentDescription="@string/content_description_add_new_alarm"
        app:layout_constraintBottom_toBottomOf="@+id/tv_alarms_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_alarms_title"
        app:layout_constraintTop_toTopOf="@+id/tv_alarms_title"
        app:srcCompat="@drawable/ic_plus_rounded" />

    <ImageView
        android:id="@+id/iv_alarms"
        style="@style/big_image_landscape"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description_simple_alarm_image"
        android:src="@drawable/ic_bell_ring"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_alarms_title" />

    <TextView
        android:id="@+id/tv_alarms_info"
        style="@style/text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_alarms"
        android:textAlignment="center"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_alarms"
        tools:text="The next event will be 01.11.2024" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_alarms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_alarms_info"
        tools:listitem="@layout/item_alarm" />

    <ImageView
        android:id="@+id/iv_no_alarms"
        style="@style/giant_image"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description_add_new_alarm"
        android:src="@drawable/ic_plus_rounded_gray"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>