<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.ExpensesActivity">

    <TextView
        android:id="@+id/tv_expenses_title"
        style="@style/details_titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:text="@string/title_expenses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        style="@style/details_navigation_images"
        android:contentDescription="@string/content_description_left_arrow_image"
        app:layout_constraintBottom_toBottomOf="@+id/tv_expenses_title"
        app:layout_constraintStart_toStartOf="@+id/tv_expenses_title"
        app:layout_constraintTop_toTopOf="@+id/tv_expenses_title"
        app:srcCompat="@drawable/ic_left_arrow" />

    <ImageView
        android:id="@+id/iv_add_new_expense"
        style="@style/details_navigation_images"
        android:contentDescription="@string/content_description_add_new_expense"
        app:layout_constraintBottom_toBottomOf="@+id/tv_expenses_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_expenses_title"
        app:layout_constraintTop_toTopOf="@+id/tv_expenses_title"
        app:srcCompat="@drawable/ic_plus_rounded" />

    <TextView
        android:id="@+id/tv_expenses_amount"
        style="@style/details_numbers_portrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_expenses_title"
        tools:text="12 527 ₽" />

    <TextView
        android:id="@+id/tv_expenses_info"
        style="@style/details_with_numbers_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_expenses"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="@+id/tv_expenses_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_expenses_amount"
        tools:text="You can spend 7 473 ₽ more this month" />

    <Button
        android:id="@+id/button_add_category"
        style="@style/details_add_category_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_expenses_add_new_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_expenses_info" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_expenses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_category"
        tools:listitem="@layout/item_expense" />

</androidx.constraintlayout.widget.ConstraintLayout>