<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.LimitsActivity">

    <TextView
        android:id="@+id/tv_limits_title"
        style="@style/details_titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:text="@string/title_limits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        style="@style/details_navigation_images"
        android:contentDescription="@string/content_description_left_arrow_image"
        app:layout_constraintBottom_toBottomOf="@+id/tv_limits_title"
        app:layout_constraintStart_toStartOf="@+id/tv_limits_title"
        app:layout_constraintTop_toTopOf="@+id/tv_limits_title"
        app:srcCompat="@drawable/ic_left_arrow" />

    <ImageView
        android:id="@+id/iv_add_new_limit"
        style="@style/details_navigation_images"
        android:contentDescription="@string/content_description_add_new_limit"
        app:layout_constraintBottom_toBottomOf="@+id/tv_limits_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_limits_title"
        app:layout_constraintTop_toTopOf="@+id/tv_limits_title"
        app:srcCompat="@drawable/ic_plus_rounded" />

    <TextView
        android:id="@+id/tv_limits_info"
        style="@style/details_without_numbers_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_limits"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_limits_title"
        tools:text="You can spend 7 473 ₽ more this month" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_limits"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_limits_info"
        tools:listitem="@layout/item_limit" />

</androidx.constraintlayout.widget.ConstraintLayout>