<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AddDebtFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/creamy"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_add_debt_title"
                style="@style/activity_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/dialog_add_new_debt"
                app:layout_constraintBottom_toTopOf="@id/et_add_debt_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_add_debt_amount"
                style="@style/add_fragments_inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_amount"
                android:inputType="number"
                app:layout_constraintBottom_toTopOf="@id/et_add_debt_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_debt_title" />

            <EditText
                android:id="@+id/et_add_debt_date"
                style="@style/add_fragments_inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_deadline"
                android:inputType="date"
                app:layout_constraintBottom_toTopOf="@id/et_add_debt_creditor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_add_debt_amount" />

            <EditText
                android:id="@+id/et_add_debt_creditor"
                style="@style/add_fragments_inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_creditor"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@id/button_add_debt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_add_debt_date" />

            <Button
                android:id="@+id/button_add_debt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/green"
                android:padding="8dp"
                android:text="@string/button_done"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_add_debt_creditor" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>