<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.AddMoneyBoxFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/creamy"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_add_money_box_title"
                style="@style/add_fragments_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_create_money_box"
                app:layout_constraintBottom_toTopOf="@id/et_add_money_box_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_add_money_box_amount"
                style="@style/add_fragments_inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_amount"
                android:inputType="number"
                app:layout_constraintBottom_toTopOf="@id/et_add_money_box_goal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_money_box_title" />

            <EditText
                android:id="@+id/et_add_money_box_goal"
                style="@style/add_fragments_inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_money_box"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@id/button_add_money_box"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_add_money_box_amount" />

            <Button
                android:id="@+id/button_add_money_box"
                style="@style/add_fragments_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_done"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_add_money_box_goal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>